CREATE TYPE "doc_type_enum" AS ENUM ('passport', 'photo');

CREATE TYPE "application_status_enum" AS ENUM ('CREATED', 'KYC_PENDING', 'KYC_APPROVED', 'KYC_REJECTED', 'MANUAL_REVIEW', 'COMPLETED');

CREATE TYPE "debit_account_status_enum" AS ENUM ('ACTIVE', 'CLOSED', 'BLOCKED');

CREATE TYPE "kyc_result_enum" AS ENUM ('approved', 'rejected', 'manual_review');

CREATE TYPE "notification_delivery_method_enum" AS ENUM ('push', 'email', 'sms');

CREATE TYPE "notification_status_enum" AS ENUM ('PENDING', 'SENT');

CREATE TABLE "applicant" (
  "applicant_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar(50),
  "middle_name" varchar(50),
  "last_name" varchar(50),
  "email" varchar(100) UNIQUE,
  "phone_number" varchar(15),
  "date_of_birth" date,
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "applicant_documents" (
  "applicant_documents_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "applicant_id" int,
  "doc_type" "doc_type_enum",
  "storage_ref" varchar,
  "masked_value" varchar,
  "verified" boolean,
  "created_at" timestamp
);

CREATE TABLE "applicant_sensitive_data" (
  "applicant_sensitive_data_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "applicant_id" int UNIQUE,
  "passport_number_encrypted" varchar,
  "passport_series_encrypted" varchar,
  "registred_address_encrypted" varchar,
  "residential_address_encrypted" varchar,
  "same_as_registration" boolean,
  "snils_encrypted" varchar,
  "inn_encrypted" varchar,
  "created_at" timestamp
);

CREATE TABLE "application" (
  "application_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "applicant_id" int,
  "application_number" varchar(20) UNIQUE,
  "status" "application_status_enum",
  "applied_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "debit_account" (
  "account_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "applicant_id" int,
  "application_id" int UNIQUE,
  "account_number" varchar(20) UNIQUE,
  "balance" decimal(10,2),
  "status" "debit_account_status_enum",
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "application_history" (
  "history_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "application_id" int,
  "status" "application_status_enum",
  "changed_by" varchar(50),
  "changed_at" timestamp
);

CREATE TABLE "kyc_result" (
  "kyc_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "application_id" int,
  "result" "kyc_result_enum",
  "reason_code" varchar(50),
  "checked_at" timestamp
);

CREATE TABLE "notification" (
  "notification_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "application_id" int,
  "message" text,
  "delivery_method" "notification_delivery_method_enum",
  "status" "notification_status_enum",
  "sent_at" timestamp,
  "updated_at" timestamp
);

COMMENT ON COLUMN "applicant_documents"."storage_ref" IS 'ссылка на зашифрованное хранилище/vault';

COMMENT ON COLUMN "applicant_sensitive_data"."residential_address_encrypted" IS 'фактический адрес проживания';

COMMENT ON COLUMN "applicant_sensitive_data"."same_as_registration" IS 'совпадает ли фактический адрес с пропиской';

COMMENT ON COLUMN "application_history"."changed_by" IS 'заполняется только для решений админа в MANUAL_REVIEW, для системных переходов — null';

ALTER TABLE "applicant_documents" ADD FOREIGN KEY ("applicant_id") REFERENCES "applicant" ("applicant_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "applicant_sensitive_data" ADD FOREIGN KEY ("applicant_id") REFERENCES "applicant" ("applicant_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "application" ADD FOREIGN KEY ("applicant_id") REFERENCES "applicant" ("applicant_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "debit_account" ADD FOREIGN KEY ("applicant_id") REFERENCES "applicant" ("applicant_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "debit_account" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "application_history" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "kyc_result" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "notification" ADD FOREIGN KEY ("application_id") REFERENCES "application" ("application_id") DEFERRABLE INITIALLY IMMEDIATE;
