Table Applicant {
  applicant_id int [pk, increment]
  first_name varchar
  middle_name varchar
  last_name varchar
  date_of_birth date
  email varchar [unique]
  phone_number varchar
  registered_address varchar
  passport_series varchar
  passport_number varchar
  photo_document_url varchar
}

Table Application {
  application_id int [pk, increment]
  applicant_id int [ref: > Applicant.applicant_id]
  number_application varchar [unique]
  created_at timestamp
  status varchar
}

Table Debit_account {
  debit_account_id int [pk, increment]
  application_id int [ref: - Application.application_id]
  account_number varchar [unique]
  amount decimal
  currency varchar
  status varchar
}

Table Application_history {
  history_id int [pk, increment]
  application_id int [ref: > Application.application_id]
  previous_status varchar
  new_status varchar
  changed_at timestamp
  changed_by varchar
}

Table KYC_Result {
  kyc_id int [pk, increment]
  application_id int [ref: > Application.application_id]
  provider_reference_id varchar
  verdict varchar
  reason_code varchar
  requested_at timestamp
  responded_at timestamp
}

Table Notification {
  notification_id int [pk, increment]
  application_id int [ref: > Application.application_id]
  channel varchar
  status varchar
  sent_at timestamp
}

// TODO: сверить типы данных, добавить not null/default где нужно
